--- a/labs/rustycoder-python-restAPI-flask/1.md
+++ b/labs/rustycoder-python-restAPI-flask/1.md
@@ -1,8 +1,8 @@
 # Rusty Coder : REST APIs in Python with Flask
 
-This DevNet learning lab helps rusty coders create REST APIs and make REST API calls in their Python programs. It uses a python package called Flask.
+This DevNet learning lab helps rusty coders create REST APIs and make REST API calls in their Python programs using a python package called Flask.
 
-This DevNet learning lab helps the rusty coder quickly download some modern software tools and use them write a Hello World app. It is not a comprehensive tutorial about the tools, as there are many free resources out there today. It is a quick and easy way to get set up and get your hands dirty. We made some choices for you to minimize the research you need to do to get coding.
+This DevNet learning lab helps the rusty coder quickly download modern software tools and use them to write a Hello World app. It is not a comprehensive tutorial about the tools, as there are many free resources out there today. Rather, it is a way to quickly get set up and get your hands dirty. We made some choices for you to minimize the research you need to do to get coding.
 
 A rusty coder is someone who coded in their past (say, over 5, 10, 15, or 20 years ago) and wants to get started again using the tools that are available today in a fast easy way. A rusty coder probably used Unix or Windows in the past. A rusty coder has used a command line and coded with APIs in some older operating system and language, but perhaps has not coded with REST APIs. This learning lab is designed for developing on a Mac today.
 
