--- a/labs/helloworld-rustycoder-getsetup/2.md
+++ b/labs/helloworld-rustycoder-getsetup/2.md
@@ -32,7 +32,7 @@ Oh- Did you get an error? Yes, you got an error because you didn't tell git who 
 * ``git config --global user.email "you@example.com"``
 * ``git config --global user.name "Your Name"``
 Now try again
-* ``git commit -m "added hellodevnet.py"`` You now committed your changes in your local repo.
+* ``git commit -a -m "added hellodevnet.py"`` You now committed your changes in your local repo.
 * ``git push`` You now pushed those changes up to your GitHub repo.
 Now go take a look at your GitHub repo. You should see your **hellodevnet.py** file up there. Success! Congratulations!
 
