--- a/labs/rustycoder-python-restAPI-flask/1.md
+++ b/labs/rustycoder-python-restAPI-flask/1.md
@@ -28,8 +28,42 @@ One of the biggest reasons to use Python is because of the large number of Pytho
 
 ## Step 2. Create a REST API for your python program using Flask.
 
-xxxx
+We will create a simple web server/service
 
-Congratulations! You just wrote your first Hello World command in python!
+* `cd /Users/username/Code` Go to your working directory.
+* `git clone http://github.com/CiscoDevNet/devnet-rustycoder-samplecode` Download the sample code from Cisco DevNet.
+
+You will see a file called `web-server.py`
+```
+# import flask library
+from flask import Flask
+
+# create an app instance
+app = Flask(__name__)
+
+# define url router, this function will respond when a user visits "/"
+@app.route('/')
+def hello_world():
+    return 'Hello, World!'
+
+# define url router, this function will respond when a user visits "/devnet"
+@app.route('/devnet')
+def hello_world():
+    return 'Hello, DevNet!'
+
+# main entry
+if __name__ == '__main__':
+    # run app when the script is executed
+    # this will create a web server at port 8080, you can visit http://0.0.0.0:8080/ and http://0.0.0.0:8080/devnet
+    app.run(host='0.0.0.0', port=8080, debug=True)
+```
+
+This example will create an simple web server running at port 8080
+
+* Run this command `python3 web-server.py`
+* Open `http://0.0.0.0:8080/ ` with your browser
+* Open `http://0.0.0.0:8080/devnet ` with your browser
+
+Congratulations! You just created your first Hello World REST API in python!
 
 #### Next Step: Call a REST API from your python program using Flask.
