--- a/labs/rustycoder-python-restAPI-flask/2.md
+++ b/labs/rustycoder-python-restAPI-flask/2.md
@@ -4,6 +4,92 @@ It's useful to be able to call a REST API from your python programs. This can be
 
 xxxx
 
+# Example 2 : create a REST API service `rest-api.py`
+
+This example will create an REST API to handle `GET` & `POST` request operation to *device* resource.
+
+1. Run this command `python3 rest-api.py` and service will running at the url : `http://0.0.0.0:8080/api/devices/`
+
+2. Make a *GET* request to that API [http://0.0.0.0:8080/api/devices/](http://0.0.0.0:8080/api/devices/)
+    ![Get Request](doc/images/img-1.png)
+
+
+3. Make a *POST* request
+
+3.1 add `Content-Type : application/json` to header
+![POST Request](doc/images/img-2.png)
+
+3.2 add request body
+```json
+{
+    "name":"NX-9K-1",
+    "ip":"10.0.0.3"
+}
+```
+![POST Request](doc/images/img-3.png)
+
+
+3.3 Send
+
+![POST Request](doc/images/img-4.png)
+
+
+```# import functions from the flask library
+from flask import Flask, jsonify, request, abort
+
+# create an app instance
+app = Flask(__name__)
+
+# create a devices resource
+devices = [
+    {
+        "id": 0,
+        "name": "NX-9K-1",
+        "ip": "10.0.0.1"
+    },
+    {
+        "id": 1,
+        "name": "NX-9K-2",
+        "ip": "10.0.0.2"
+    }
+]
+
+
+# handle GET request
+@app.route('/api/devices/', methods=['GET'])
+def get_devices():
+    return jsonify({'tasks': devices})
+
+
+# handle POST request
+@app.route('/api/devices/', methods=['POST'])
+def post_device():
+    #  check required parameters
+    # if doesn't have all required parameters, return 404 error
+    if not request.json or 'name' not in request.json or 'ip' not in request.json:
+        abort(404)
+
+    # generate device obj
+    device = {
+        "id": len(devices),
+        "name": request.json['name'],
+        "ip": request.json['ip']
+    }
+
+    # add device obj to devices resources
+    devices.append(device)
+
+    # return devices resources with 201 state code
+    return jsonify({'task': devices}), 201
+
+
+# main entry
+if __name__ == '__main__':
+    # run app when script is been execute
+    # this will create a web server at port 8080, you can visit http://0.0.0.0:8080/
+    app.run(host='0.0.0.0', port=8080, debug=True)
+```
+
 ### Learn more about xxxx
 
 #### Congratulations! You've Completed [Rusty Coder : REST APIs in Python with Flask!]
