added description for creating a REST API

--- a/labs/rustycoder-python-restAPI-flask/1.md
+++ b/labs/rustycoder-python-restAPI-flask/1.md
@@ -13,7 +13,7 @@ The modern software world speaks to each other using REST APIs. Since you're wri
 The objective of this lab is to show the rusty coder how to:
 
 * Install and use the Python **Flask** package.
-* Create a REST API for your python program using Flask.
+* Make a REST API for your python program using Flask.
 * Call a REST API from your python program using Flask.
 
 ## Prerequisites
@@ -22,35 +22,50 @@ This assumes you already installed and know how to use the Mac terminal, python3
 
 ## Step 1. Install the Python **Flask** package.
 
-One of the biggest reasons to use Python is because of the large number of Python packages (or libraries) available from the community.
+Now that you are set up to write cool python programs, you may ask how do I make it available through a REST API? In a nutshell, you need a web framework that includes a web server and tools to help you build, make, and parse REST API calls.. The power of python is all the packages that you can use. Sure enough, web frameworks is no exception. There are many choices such as Django and Flask. We recommend Flask for the rusty coder to get started with their first apps, because it's a lightweight and easy-to-use. As you progress and want to put your code into production, you can look at deeper packages such as Django.
 
-* Install Flask `pip3 install Flask`
+Let's get going by installing **Flask** using the **pip3** python package installer. (I'm assuming you have **python3** installed on your Mac, which automatically installs **pip3**.)
+* `pip3 install Flask` Install Flask.
 
-## Step 2. Create a REST API for your python program using Flask.
+Easy peasy!
 
-We will create a simple web server/service
+## Step 2. Make a REST API for your python program using Flask.
+
+Next, we will create a REST API for your python program. This involves creating a simple web server/service in your app and defining its behavior for incoming REST API requests.
+
+We created some sample code to get you started. Let's go get it from GitHub.
 
 * `cd /Users/username/Code` Go to your working directory.
 * `git clone http://github.com/CiscoDevNet/devnet-rustycoder-samplecode` Download the sample code from Cisco DevNet.
 
-You will see a file called `web-server.py`
+You will see a file called `web-server.py`. Let's take a closer look at what's inside.
+
+The first part simply imports the Flask library and creates the app instance.
 ```
 # import flask library
 from flask import Flask
 
 # create an app instance
 app = Flask(__name__)
+```
 
+The next part defines the behavior of REST API requests. We are creating two REST APIs- one for when the user visits the base URL ``http://baseurl/` and the other for when the user visits ``http://baseurl/devnet``
+```
 # define url router, this function will respond when a user visits "/"
 @app.route('/')
 def hello_world():
+    // Put your python code here!
     return 'Hello, World!'
 
 # define url router, this function will respond when a user visits "/devnet"
 @app.route('/devnet')
 def hello_world():
+    // Put your python code here!
     return 'Hello, DevNet!'
+```
 
+The last part runs the webserver with your REST API when the script is executed. This is where you specify the URL and port.
+```
 # main entry
 if __name__ == '__main__':
     # run app when the script is executed
@@ -58,12 +73,14 @@ if __name__ == '__main__':
     app.run(host='0.0.0.0', port=8080, debug=True)
 ```
 
-This example will create an simple web server running at port 8080
+Let's run this.
 
-* Run this command `python3 web-server.py`
-* Open `http://0.0.0.0:8080/ ` with your browser
-* Open `http://0.0.0.0:8080/devnet ` with your browser
+* `python3 web-server.py` Run this command
+* Open a browser and go to `http://0.0.0.0:8080/` You should see "Hello, World!"
+* Now go to `http://0.0.0.0:8080/devnet` You should see "Hello, DevNet!"
 
-Congratulations! You just created your first Hello World REST API in python!
+Congratulations! You just created a REST API for your python program! You served it through your simple web server running at port 8080. Exciting!
+
+You can put all your python code in here and write some really cool REST APIs! You're not looking very rusty after all!
 
 #### Next Step: Call a REST API from your python program using Flask.
