--- a/labs/rustycoder-python-restAPI-flask/2.md
+++ b/labs/rustycoder-python-restAPI-flask/2.md
@@ -1,8 +1,6 @@
 ## Step 3. Call a REST API from your python program using Flask.
 
-It's useful to be able to call a REST API from your python programs. This can be done easily using Flask.
-
-xxxx
+It's also useful to be able to call REST APIs from your python programs. This can be done easily using Flask. We have some sample code to get you started in a file called ``rest-api.py``. You downloaded it earlier.
 
 # Example 2 : create a REST API service `rest-api.py`
 
