added more description for creating a REST API

--- a/labs/rustycoder-python-restAPI-flask/2.md
+++ b/labs/rustycoder-python-restAPI-flask/2.md
@@ -1,43 +1,23 @@
-## Step 3. Call a REST API from your python program using Flask.
+## Step 3. Create a REST API service for your python program using Flask.
 
-It's also useful to be able to call REST APIs from your python programs. This can be done easily using Flask. We have some sample code to get you started in a file called ``rest-api.py``. You downloaded it earlier.
+It's also useful to expose your python program through REST APIs. This can be done easily using Flask. We have some sample code to get you started in a file called ``rest-api.py``. You downloaded it earlier.
 
-# Example 2 : create a REST API service `rest-api.py`
+* `cd /Users/username/Code/devnet-rustycoder-samplecode`
 
-This example will create an REST API to handle `GET` & `POST` request operation to *device* resource.
+First, let's create a more interesting web server/web service.
+Let's look at the code.
 
-1. Run this command `python3 rest-api.py` and service will running at the url : `http://0.0.0.0:8080/api/devices/`
-
-2. Make a *GET* request to that API [http://0.0.0.0:8080/api/devices/](http://0.0.0.0:8080/api/devices/)
-    ![Get Request](doc/images/img-1.png)
-
-
-3. Make a *POST* request
-
-3.1 add `Content-Type : application/json` to header
-![POST Request](doc/images/img-2.png)
-
-3.2 add request body
-```json
-{
-    "name":"NX-9K-1",
-    "ip":"10.0.0.3"
-}
+The first part imports the Flask library and creates the app instance, but this time we will import some useful functions that will help us with our REST calls.
 ```
-![POST Request](doc/images/img-3.png)
-
-
-3.3 Send
-
-![POST Request](doc/images/img-4.png)
-
-
-```# import functions from the flask library
+# import functions from the flask library
 from flask import Flask, jsonify, request, abort
 
 # create an app instance
 app = Flask(__name__)
+```
 
+Nexst, we will create a new resource called `devices` which has an `id`, device name `name`, and device IP address `ip`.
+```
 # create a devices resource
 devices = [
     {
@@ -51,13 +31,14 @@ devices = [
         "ip": "10.0.0.2"
     }
 ]
+```
 
-
+Next, we define the behavior of our program for the REST APIs. We are creating a REST API for `http://baseurl/api/devices/` with `GET` and `POST`. We will turn our response into JSON using `jsonify`.
+```
 # handle GET request
 @app.route('/api/devices/', methods=['GET'])
 def get_devices():
     return jsonify({'tasks': devices})
-
 
 # handle POST request
 @app.route('/api/devices/', methods=['POST'])
@@ -79,8 +60,10 @@ def post_device():
 
     # return devices resources with 201 state code
     return jsonify({'task': devices}), 201
+```
 
-
+The last part runs the webserver with your REST API at the specified URL and port when the script is executed.
+```
 # main entry
 if __name__ == '__main__':
     # run app when script is been execute
@@ -88,6 +71,31 @@ if __name__ == '__main__':
     app.run(host='0.0.0.0', port=8080, debug=True)
 ```
 
-### Learn more about xxxx
+## Step 4. Now let's run it all.
+
+This example will create a REST API to handle `GET` & `POST` request operation to *device* resource.
+
+* `python3 rest-api.py` Run your program. The service will running at the url : `http://0.0.0.0:8080/api/devices/`
+
+* Make a `GET` request to that API [http://0.0.0.0:8080/api/devices/](http://0.0.0.0:8080/api/devices/) using **Postman**
+    ![Get Request](doc/images/img-1.png)
+
+* Make a *POST* request using **Postman**
+** Add `Content-Type : application/json` to header
+![POST Request](doc/images/img-2.png)
+** Add request body
+```json
+{
+    "name":"NX-9K-1",
+    "ip":"10.0.0.3"
+}
+```
+![POST Request](doc/images/img-3.png)
+
+* Send your request
+
+![POST Request](doc/images/img-4.png)
+
+Wow! You just created a REST API for your python program and called your APIs from Postman! You're not looking so rusty anymore! Congratulations!
 
 #### Congratulations! You've Completed [Rusty Coder : REST APIs in Python with Flask!]
