--- a/labs/rustycoder-python-restAPI-flask/1.md
+++ b/labs/rustycoder-python-restAPI-flask/1.md
@@ -1,6 +1,6 @@
 # Rusty Coder : REST APIs in Python with Flask
 
-This DevNet learning lab helps rusty coders create REST APIs and make REST API calls in their Python programs using a python package called Flask.
+This DevNet learning lab helps rusty coders create REST APIs for their Python programs using a python package called Flask.
 
 This DevNet learning lab helps the rusty coder quickly download modern software tools and use them to write a Hello World app. It is not a comprehensive tutorial about the tools, as there are many free resources out there today. Rather, it is a way to quickly get set up and get your hands dirty. We made some choices for you to minimize the research you need to do to get coding.
 
@@ -13,8 +13,8 @@ The modern software world speaks to each other using REST APIs. Since you're wri
 The objective of this lab is to show the rusty coder how to:
 
 * Install and use the Python **Flask** package.
-* Make a REST API for your python program using Flask.
-* Call a REST API from your python program using Flask.
+* Make a web server/web service for your python program using Flask.
+* Create a REST API service for your python program using Flask.
 
 ## Prerequisites
 
@@ -22,22 +22,21 @@ This assumes you already installed and know how to use the Mac terminal, python3
 
 ## Step 1. Install the Python **Flask** package.
 
-Now that you are set up to write cool python programs, you may ask how do I make it available through a REST API? In a nutshell, you need a web framework that includes a web server and tools to help you build, make, and parse REST API calls.. The power of python is all the packages that you can use. Sure enough, web frameworks is no exception. There are many choices such as Django and Flask. We recommend Flask for the rusty coder to get started with their first apps, because it's a lightweight and easy-to-use. As you progress and want to put your code into production, you can look at deeper packages such as Django.
+Now that you are set up to write cool python programs, you may ask how do I make it available through a REST API? In a nutshell, you can use a web framework that includes a web server and tools to help you build, make, and parse REST API calls. The power of python is all the packages that you can use. Sure enough, the area of web frameworks is no exception. There are many choices such as Django and Flask. We recommend Flask for the rusty coder to get started with their first apps, because it's lightweight and easy-to-use. As you progress and want to put your code into production, you can look at more complete packages such as Django.
 
 Let's get going by installing **Flask** using the **pip3** python package installer. (I'm assuming you have **python3** installed on your Mac, which automatically installs **pip3**.)
 * `pip3 install Flask` Install Flask.
-
 Easy peasy!
 
-## Step 2. Make a REST API for your python program using Flask.
+## Step 2. Make a web server/web service for your python program using Flask.
 
-Next, we will create a REST API for your python program. This involves creating a simple web server/service in your app and defining its behavior for incoming REST API requests.
+Next, we will create a web server for your python program. This involves creating a simple web server/service in your app and defining its behavior for incoming web requests.
 
 We created some sample code to get you started. Let's go get it from GitHub.
 
 * `cd /Users/username/Code` Go to your working directory.
 * `git clone http://github.com/CiscoDevNet/devnet-rustycoder-samplecode` Download the sample code from Cisco DevNet.
-
+* `cd devnet-rustycoder-samplecode`
 You will see a file called `web-server.py`. Let's take a closer look at what's inside.
 
 The first part simply imports the Flask library and creates the app instance.
@@ -49,7 +48,7 @@ from flask import Flask
 app = Flask(__name__)
 ```
 
-The next part defines the behavior of REST API requests. We are creating two REST APIs- one for when the user visits the base URL ``http://baseurl/` and the other for when the user visits ``http://baseurl/devnet``
+The next part defines the behavior of your program for web requests. We are defining two behaviors- one for when the user visits the base URL `http://baseurl/` and the other for when the user visits `http://baseurl/devnet`
 ```
 # define url router, this function will respond when a user visits "/"
 @app.route('/')
@@ -64,7 +63,7 @@ def hello_world():
     return 'Hello, DevNet!'
 ```
 
-The last part runs the webserver with your REST API when the script is executed. This is where you specify the URL and port.
+The last part runs the webserver with your defined behavior when the script is executed. This is where you specify the URL and port.
 ```
 # main entry
 if __name__ == '__main__':
@@ -78,9 +77,10 @@ Let's run this.
 * `python3 web-server.py` Run this command
 * Open a browser and go to `http://0.0.0.0:8080/` You should see "Hello, World!"
 * Now go to `http://0.0.0.0:8080/devnet` You should see "Hello, DevNet!"
+Congratulations! You just created a web service for your python program! You served it through your simple web server running at port 8080. Exciting!
 
-Congratulations! You just created a REST API for your python program! You served it through your simple web server running at port 8080. Exciting!
+You can put all your python code in here and create some really cool web services. Next, we need to RESTify it so that your program can respond to REST requests.
 
-You can put all your python code in here and write some really cool REST APIs! You're not looking very rusty after all!
+You're not looking so rusty after all!
 
-#### Next Step: Call a REST API from your python program using Flask.
+#### Next Step: Create a REST API service for your python program using Flask.
