--- a/labs/rustycoder-python-restAPI-flask/2.md
+++ b/labs/rustycoder-python-restAPI-flask/2.md
@@ -3,9 +3,10 @@
 It's also useful to expose your python program through REST APIs. This can be done easily using Flask. We have some sample code to get you started in a file called ``rest-api.py``. You downloaded it earlier.
 
 * `cd /Users/username/Code/devnet-rustycoder-samplecode`
+* `more rest-api.py`
 
-First, let's create a more interesting web server/web service.
-Let's look at the code.
+We will create a more interesting web server/web service and RESTify the API.
+Let's take a deeper look at the code.
 
 The first part imports the Flask library and creates the app instance, but this time we will import some useful functions that will help us with our REST calls.
 ```
@@ -16,7 +17,7 @@ from flask import Flask, jsonify, request, abort
 app = Flask(__name__)
 ```
 
-Nexst, we will create a new resource called `devices` which has an `id`, device name `name`, and device IP address `ip`.
+Next, we will create a new resource called `devices` which has an `id`, device name `name`, and device IP address `ip`.
 ```
 # create a devices resource
 devices = [
@@ -70,32 +71,6 @@ if __name__ == '__main__':
     # this will create a web server at port 8080, you can visit http://0.0.0.0:8080/
     app.run(host='0.0.0.0', port=8080, debug=True)
 ```
+Now let's run our new web service and REST API...
 
-## Step 4. Now let's run it all.
-
-This example will create a REST API to handle `GET` & `POST` request operation to *device* resource.
-
-* `python3 rest-api.py` Run your program. The service will running at the url : `http://0.0.0.0:8080/api/devices/`
-
-* Make a `GET` request to that API [http://0.0.0.0:8080/api/devices/](http://0.0.0.0:8080/api/devices/) using **Postman**
-    ![Get Request](doc/images/img-1.png)
-
-* Make a *POST* request using **Postman**
-** Add `Content-Type : application/json` to header
-![POST Request](doc/images/img-2.png)
-** Add request body
-```json
-{
-    "name":"NX-9K-1",
-    "ip":"10.0.0.3"
-}
-```
-![POST Request](doc/images/img-3.png)
-
-* Send your request
-
-![POST Request](doc/images/img-4.png)
-
-Wow! You just created a REST API for your python program and called your APIs from Postman! You're not looking so rusty anymore! Congratulations!
-
-#### Congratulations! You've Completed [Rusty Coder : REST APIs in Python with Flask!]
+#### Next Step: Run our new web service and call our new REST API with Postman.
