--- a/labs/rustycoder-python-restAPI-flask/2.md
+++ b/labs/rustycoder-python-restAPI-flask/2.md
@@ -71,6 +71,10 @@ if __name__ == '__main__':
     # this will create a web server at port 8080, you can visit http://0.0.0.0:8080/
     app.run(host='0.0.0.0', port=8080, debug=True)
 ```
+
+Let's get going by installing some of the required packages like **request** using the **pip3** python package installer. (I'm assuming you have **python3** installed on your Mac, which automatically installs **pip3**.)
+* `pip3 install request` Install request.
+
 Now let's run our new web service and REST API...
 
 #### Next Step: Run our new web service and call our new REST API with Postman.
