Moved request package installation step.

--- a/labs/rustycoder-python-restAPI-flask/1.md
+++ b/labs/rustycoder-python-restAPI-flask/1.md
@@ -20,12 +20,13 @@ The objective of this lab is to show the rusty coder how to:
 
 This assumes you already installed and know how to use the Mac terminal, python3, git, GitHub, and Postman. If you need to do this, please take the DevNetlearning lab entitled **Hello World for the Rusty Coder : Get Setup**.
 
-## Step 1. Install the Python **Flask** package.
+## Step 1. Install the Python **Flask** and **request** packages.
 
 Now that you are set up to write cool python programs, you may ask how do I make it available through a REST API? In a nutshell, you can use a web framework that includes a web server and tools to help you build, make, and parse REST API calls. The power of python is all the packages that you can use. Sure enough, the area of web frameworks is no exception. There are many choices such as Django and Flask. We recommend Flask for the rusty coder to get started with their first apps, because it's lightweight and easy-to-use. As you progress and want to put your code into production, you can look at more complete packages such as Django.
 
-Let's get going by installing **Flask** using the **pip3** python package installer. (I'm assuming you have **python3** installed on your Mac, which automatically installs **pip3**.)
+Let's get going by installing **Flask** and **request** using the **pip3** python package installer. (I'm assuming you have **python3** installed on your Mac, which automatically installs **pip3**.)
 * `pip3 install Flask` Install Flask.
+* `pip3 install request` Install Flask.
 Easy peasy!
 
 ## Step 2. Make a web server/web service for your python program using Flask.
