added step to make REST API calls with requests

--- a/labs/rustycoder-python-restAPI-flask/1.md
+++ b/labs/rustycoder-python-restAPI-flask/1.md
@@ -1,10 +1,10 @@
-# Rusty Coder : REST APIs in Python with Flask
+# Rusty Coder : REST APIs in Python with Flask and requests
 
-This DevNet learning lab helps rusty coders create REST APIs for their Python programs using a python package called Flask.
+This DevNet learning lab helps rusty coders 1) create REST APIs for their Python programs using Flask and 2) make REST API calls from their Python programs using requests.
 
-This DevNet learning lab helps the rusty coder quickly download modern software tools and use them to write a Hello World app. It is not a comprehensive tutorial about the tools, as there are many free resources out there today. Rather, it is a way to quickly get set up and get your hands dirty. We made some choices for you to minimize the research you need to do to get coding.
+This DevNet learning lab helps the rusty coder quickly download modern software tools and use them to write a Hello World app. It is not a comprehensive tutorial about the tools, as there are many free resources out there today. Rather, it is a way to quickly get set up, get hands on, and get working code. We made some choices for you to minimize the research you need to do to get coding. We assume that you will dig deeper after you're done to learn more.
 
-A rusty coder is someone who coded in their past (say, over 5, 10, 15, or 20 years ago) and wants to get started again using the tools that are available today in a fast easy way. A rusty coder probably used Unix or Windows in the past. A rusty coder has used a command line and coded with APIs in some older operating system and language, but perhaps has not coded with REST APIs. This learning lab is designed for developing on a Mac today.
+A rusty coder is someone who coded in their past (say, over 5, 10, or 20 years ago) and wants to get started again using the tools that are available today in a fast easy way. A rusty coder probably used Unix or Windows in the past. A rusty coder has used a command line and coded with APIs in an older operating system and language, but may not have coded with REST APIs. This learning lab is designed for developing on a Mac today.
 
 ## Objectives
 
@@ -13,20 +13,24 @@ The modern software world speaks to each other using REST APIs. Since you're wri
 The objective of this lab is to show the rusty coder how to:
 
 * Install and use the Python **Flask** package.
+* Install and use the Python **requests** package.
 * Make a web server/web service for your python program using Flask.
-* Create a REST API service for your python program using Flask.
+* Create a REST API service for your python program using **Flask**.
+* Make a REST API call with a python program using **requests**.
 
 ## Prerequisites
 
-This assumes you already installed and know how to use the Mac terminal, python3, git, GitHub, and Postman. If you need to do this, please take the DevNetlearning lab entitled **Hello World for the Rusty Coder : Get Setup**.
+This assumes you already installed and know how to use the Mac terminal, python3, git, GitHub, and Postman. If you need to do this, please take the DevNet learning lab entitled [Hello World for the Rusty Coder : Get Setup](https://learninglabs.cisco.com/modules/rustycoder-getstarted/helloworld-rustycoder-getsetup/step/1).
 
-## Step 1. Install the Python **Flask** and **request** packages.
+## Step 1. Install the Python **Flask** and **requests** packages.
 
-Now that you are set up to write cool python programs, you may ask how do I make it available through a REST API? In a nutshell, you can use a web framework that includes a web server and tools to help you build, make, and parse REST API calls. The power of python is all the packages that you can use. Sure enough, the area of web frameworks is no exception. There are many choices such as Django and Flask. We recommend Flask for the rusty coder to get started with their first apps, because it's lightweight and easy-to-use. As you progress and want to put your code into production, you can look at more complete packages such as Django.
+Now that you are set up to write cool python programs, you may ask how do I make my program available through a REST API and how do I call a REST API? The power of python is all the packages that you can use, and sure enough the area of web frameworks is no exception.
 
-Let's get going by installing **Flask** and **request** using the **pip3** python package installer. (I'm assuming you have **python3** installed on your Mac, which automatically installs **pip3**.)
+In a nutshell, to make REST API calls you can use a package called **requests**. To create a REST API you can use a web framework that includes a web server and tools to help you construct a REST API. There are many choices such as **Django** and **Flask**. We recommend Flask for the rusty coder to get started with their first apps, because it's lightweight and easy to use. As you progress and want to put your code into production, you can look at more complete packages such as Django.
+
+Let's get going by installing **requests** and **Flask** using the **pip3** python package installer. (I'm assuming you have **python3** installed on your Mac, which automatically installs **pip3**. If you are on Windows, you need to install **python3** and **pip3** separately.)
+* `pip3 install requests` Install requests.
 * `pip3 install Flask` Install Flask.
-* `pip3 install request` Install Flask.
 Easy peasy!
 
 ## Step 2. Make a web server/web service for your python program using Flask.
@@ -48,7 +52,6 @@ from flask import Flask
 # create an app instance
 app = Flask(__name__)
 ```
-
 The next part defines the behavior of your program for web requests. We are defining two behaviors- one for when the user visits the base URL `http://baseurl/` and the other for when the user visits `http://baseurl/devnet`
 ```
 # define url router, this function will respond when a user visits "/"
@@ -63,7 +66,6 @@ def hello_world():
     // Put your python code here!
     return 'Hello, DevNet!'
 ```
-
 The last part runs the webserver with your defined behavior when the script is executed. This is where you specify the URL and port.
 ```
 # main entry
@@ -72,9 +74,7 @@ if __name__ == '__main__':
     # this will create a web server at port 8080, you can visit http://0.0.0.0:8080/ and http://0.0.0.0:8080/devnet
     app.run(host='0.0.0.0', port=8080, debug=True)
 ```
-
 Let's run this.
-
 * `python3 web-server.py` Run this command
 * Open a browser and go to `http://0.0.0.0:8080/` You should see "Hello, World!"
 * Now go to `http://0.0.0.0:8080/devnet` You should see "Hello, DevNet!"
