--- a/labs/rustycoder-python-restAPI-flask/2.md
+++ b/labs/rustycoder-python-restAPI-flask/2.md
@@ -1,12 +1,11 @@
 ## Step 3. Create a REST API service for your python program using Flask.
 
-It's also useful to expose your python program through REST APIs. This can be done easily using Flask. We have some sample code to get you started in a file called ``rest-api.py``. You downloaded it earlier.
+It's also useful to expose your python program through REST APIs. This can be done easily with Flask. We have some sample code to get you started in a file called ``rest-api.py``. You downloaded it earlier.
 
 * `cd /Users/username/Code/devnet-rustycoder-samplecode`
 * `more rest-api.py`
 
-We will create a more interesting web server/web service and RESTify the API.
-Let's take a deeper look at the code.
+We will create a more interesting web server/web service and RESTify the API. Now let's take a deeper look at the code.
 
 The first part imports the Flask library and creates the app instance, but this time we will import some useful functions that will help us with our REST calls.
 ```
@@ -16,7 +15,6 @@ from flask import Flask, jsonify, request, abort
 # create an app instance
 app = Flask(__name__)
 ```
-
 Next, we will create a new resource called `devices` which has an `id`, device name `name`, and device IP address `ip`.
 ```
 # create a devices resource
@@ -33,7 +31,6 @@ devices = [
     }
 ]
 ```
-
 Next, we define the behavior of our program for the REST APIs. We are creating a REST API for `http://baseurl/api/devices/` with `GET` and `POST`. We will turn our response into JSON using `jsonify`.
 ```
 # handle GET request
@@ -62,7 +59,6 @@ def post_device():
     # return devices resources with 201 state code
     return jsonify({'task': devices}), 201
 ```
-
 The last part runs the webserver with your REST API at the specified URL and port when the script is executed.
 ```
 # main entry
