--- a/labs/rustycoder-python-restAPI-flask/3.md
+++ b/labs/rustycoder-python-restAPI-flask/3.md
@@ -5,10 +5,10 @@ Now let's put it all together. In the last step we created a REST API to handle 
 * Make a `GET` request to that API [http://0.0.0.0:8080/api/devices/](http://0.0.0.0:8080/api/devices/) using **Postman**
 ![](/posts/files/rustycoder-python-restAPI-flask/assets/images/img-1.png)`
 
-* Make a *POST* request using **Postman**
-** Add `Content-Type : application/json` to header
+Next, we will make a **POST** request using **Postman**
+* Add `Content-Type : application/json` to the header
 ![](/posts/files/rustycoder-python-restAPI-flask/assets/images/img-2.png)`
-** Add request body
+* Add the request body
 ```json
 {
     "name":"NX-9K-1",
@@ -16,12 +16,9 @@ Now let's put it all together. In the last step we created a REST API to handle 
 }
 ```
 ![](/posts/files/rustycoder-python-restAPI-flask/assets/images/img-3.png)`
-
 * Send your request
 ![](/posts/files/rustycoder-python-restAPI-flask/assets/images/img-4.png)`
 
 Wow! You just created a REST API for your python program and called your APIs from Postman!
 
-You're not looking so rusty anymore!
-
-#### Congratulations! You've Completed [Rusty Coder : REST APIs in Python with Flask!]
+#### Next Step: Call a REST API from your python program using requests
