--- a/labs/helloworld-rustycoder-getsetup/1.md
+++ b/labs/helloworld-rustycoder-getsetup/1.md
@@ -1,8 +1,9 @@
 # HelloWorld for the Rusty Coder : Get started (for Mac)
 
-This DevNet learning lab helps the rusty coder quickly download modern software tools and use them to write a Hello World app. It is not a comprehensive tutorial about the tools, as there are many free resources out there today. Rather, it is a way to quickly get set up and get your hands dirty. We made some choices for you to minimize the research you need to do to get coding.
 
-A rusty coder is someone who coded in their past (say, over 5, 10, 15, or 20 years ago) and wants to get started again using the tools that are available today in a fast easy way. A rusty coder probably used Unix or Windows in the past. A rusty coder has used a command line and coded with APIs in some older operating system and language, but perhaps has not coded with REST APIs. This learning lab is designed for developing on a Mac today.
+This DevNet learning lab helps the rusty coder quickly download modern software tools and use them to write a Hello World app. It is not a comprehensive tutorial about the tools, as there are many free resources out there today. Rather, it is a way to quickly get set up, get hands on, and get working code. We made some choices for you to minimize the research you need to do to get coding. We assume that you will dig deeper after you're done to learn more.
+
+A rusty coder is someone who coded in their past (say, over 5, 10, or 20 years ago) and wants to get started again using the tools that are available today in a fast easy way. A rusty coder probably used Unix or Windows in the past. A rusty coder has used a command line and coded with APIs in an older operating system and language, but may not have coded with REST APIs. This learning lab is designed for developing on a Mac today.
 
 ## Objectives
 
@@ -11,6 +12,7 @@ The objective of this lab is to show the rusty coder how to:
 * Find and use the terminal and command line tools on their Mac
 * Install and use the latest version of python
 * Install and use git and github for storing and sharing code
+* Install postman for making REST API calls.
 
 If you already know how to use the Mac terminal, python, git, and GitHub, then you should skip this learning lab.
 
