--- a/labs/rustycoder-python-restAPI-flask/1.md
+++ b/labs/rustycoder-python-restAPI-flask/1.md
@@ -41,7 +41,7 @@ We created some sample code to get you started. Let's go get it from GitHub.
 
 * `cd /Users/username/Code` Go to your working directory.
 * `git clone http://github.com/CiscoDevNet/devnet-rustycoder-samplecode` Download the sample code from Cisco DevNet.
-* `cd devnet-rustycoder-samplecode`
+* `cd devnet-rustycoder-samplecode/python-flask-helloworld`
 You will see a file called `web-server.py`. Let's take a closer look at what's inside.
 
 The first part simply imports the Flask library and creates the app instance.
@@ -62,7 +62,7 @@ def hello_world():
 
 # define url router, this function will respond when a user visits "/devnet"
 @app.route('/devnet')
-def hello_world():
+def hello_devnet():
     // Put your python code here!
     return 'Hello, DevNet!'
 ```
