--- a/labs/rustycoder-python-restAPI-flask/3.md
+++ b/labs/rustycoder-python-restAPI-flask/3.md
@@ -5,7 +5,7 @@ Now let's put it all together. In the last step we created a REST API to handle 
 * Make a `GET` request to that API [http://0.0.0.0:8080/api/devices/](http://0.0.0.0:8080/api/devices/) using **Postman**
 ![](/posts/files/rustycoder-python-restAPI-flask/assets/images/img-1.png)`
 
-Next, we will make a **POST** request using **Postman**
+Next, we will make a **POST** request using **Postman** to add another device to the list
 * Add `Content-Type : application/json` to the header
 ![](/posts/files/rustycoder-python-restAPI-flask/assets/images/img-2.png)`
 * Add the request body
