Edits for consistency and table-of-contents update

--- a/labs/helloworld-rustycoder-getsetup/2.md
+++ b/labs/helloworld-rustycoder-getsetup/2.md
@@ -1,43 +1,42 @@
-## Step 3. Get going with Git
+# Step 2: Get started with Python
 
-Git and GitHub are great ways to store and share your code. You probably used to store your code on your computer, but today it's all about storing and sharing your code in the cloud and locally on your machine. Yes, it's scary and probably a litte embarassing to put your rusty coder hello world code in public, but go ahead and do it anyways. You can erase it later. It will make you modern and it will be a great way to get help from the community and get help from my DevNet team, since we'll be able to see your code when you have questions.
+Python is one of the fastest-growing programming languages. If you want to learn one language, I would recommend you start there. Some version of Python is already installed on your Mac, but go ahead and download the latest from python.org.
 
-We will use **git** locally on your machine and **GitHub** in the cloud.
+1. Go to [python.org](http://python.org) to download the latest version of Python.
+1. Install Python.
+   When finished, your command to run Python in Terminal is **python3**.
+1. Close your Terminal and open a new one so it can find your new python3 executable.
+1. Type `python3` at your command line. You now have an execution environment for Python, known as the interpreter.
+1. In the interpreter, type:
+   ```
+   >>> print("Hello World")
+   ```
+1. To exit the interpreter, type:
+   ```
+   >>> quit()
+   ```
 
-First, get a **GitHub** account and create a repository.
-* Go to [GitHub.com](http://github.com) to create your GitHub account. (We will refer to your GitHub username as **githubusername**.)
-  * You can use your personal or work email address, as you will be able to combine them in your personal settings.
-  * They will ask you if you want to purchase an account to keep your repos private. You don't need this now and you can always get this service later.
-  * They will also invite you to walk through a tutorial. Skip it for now so you can keep progressing through this lab quickly. You can go back to the tutorial later and we have the link at the end of this page.
-* Use the GitHub UI to create a new repository called **devnet-hello-world**. Make it public. Initialize it with a README. Now you have a github repo with just one file, **README.md**.
+Congratulations! You just wrote your first Hello World command in Python and managed to exit the interpreter!
 
-Now, let's get **git** set up on your machine.
-* Install **git** locally on your machine from [git-scm.com](http://git-scm.com).
-* Close your terminal and open it again to check it out.
-* ``git help`` shows you the options you have at the command line.
+Now let's write and run a Python script.
+1. In the Terminal window, go to your new Code directory by typing:
+   ```
+   cd /Users/username/Code
+   ```
+1. Use your favorite text editor to create a file called **hellodevnet.py**:
+   ```emacs hellodevnet.py
+   ```
+1. Put the following text in your new file:
+   ```
+   print("Hello World")
+   print("Hello DevNet")
+   ```
+1. Type **ctrl-x ctrl-s** to save and exit.
+1. In the Terminal window, run the Python script you just saved:
+   ```
+   python3 hellodevnet.py
+   ```
 
-Now, let's create and edit some files and sync them between your machine and your GitHub account.
-* ``cd /Users/username/Code`` Go to your coding directory.
-* ``git clone http://github.com/githubusername/devnet-hello-world`` This pulls down your new devnet-hello-world repo to your machine.
-* ``ls`` You should see your new devnet-hello-world repo
-* ``cd devnet-hello-world`` Go to your devnet-hello-world directory
-* ``ls`` and ``more README.md`` There is your README.md file from your GitHub repo!
-Your GitHub devnet-hello-world repo is now on your local machine.
+Congratulations! You just ran your first Hello World Python program!
 
-Now let's add a new file to your local repo. We'll just move the one you created earlier.
-* ``mv ../hellodevnet.py .`` (or write a new hellodevnet.py file)
-* ``git add hellodevnet.py`` You now added the new file to your local devnet-hello-world repo.
-* ``git commit -m "added hellodevnet.py"``
-Oh- Did you get an error? Yes, you got an error because you didn't tell git who you are. You can pull from any public GitHub repo anonymously, but to make a commit you need to tell them who you are.
-* ``git config --global user.email "you@example.com"``
-* ``git config --global user.name "Your Name"``
-Now try again
-* ``git commit -a -m "added hellodevnet.py"`` You now committed your changes in your local repo.
-* ``git push`` You now pushed those changes up to your GitHub repo.
-Now go take a look at your GitHub repo. You should see your **hellodevnet.py** file up there. Success! Congratulations!
-
-### Learn more about GitHub
-
-I just showed you how to share code between your local machine and your github account, but these tools are much more powerful than that. They allow for collaborative coding. You can learn more about GitHub by doing [GitHub's Hello World](https://guides.github.com/activities/hello-world/). You will learn how to work with other coders by creating branches, making commits, and opening and merging pull requests.
-
-#### Next Step: Get going with Postman
+#### Next Step: Get going with Git
