--- a/labs/helloworld-rustycoder-getsetup/3.md
+++ b/labs/helloworld-rustycoder-getsetup/3.md
@@ -1,16 +1,72 @@
-## Step 4. Get going with Postman
+# Step 3: Get going with Git
 
-As a rusty coder, you know what an API is. But today all the rage is about REST APIs. You can find various tutorials about REST APIs on the web and on DevNet, but here we will just quickly get you set up with a very useful tool for making REST API calls called **Postman**.
+Git and GitHub are great ways to store and share your code. You probably used to store your code on your computer, but today it's all about storing and sharing your code on a storage service and locally on your machine. Yes, it's scary and probably a little embarrassing to put your rusty coder hello world code in public, but go ahead and do it anyway. You can erase it later. It will make you modern and it will be a great way to get help from the community and get help from my DevNet team, since we'll be able to see your code when you have questions.
 
-First, download and install **Postman**.
-* Go to [getpostman.com](http://getpostman.com) to download postman.
-* Install postman on your computer.
+We will use **git** locally on your machine and **GitHub** as a storage and sharing service.
 
-Postman has a request builder that helps you build and make HTTP requests and see the responses..
+First, get a **GitHub** account and create a repository.
+1. Go to [GitHub.com](https://github.com) to create your GitHub account. (We will refer to your GitHub username as **githubusername**.)
+1. You can use your personal or work email address, as you will be able to configure them for multiple purposes as needed in your account settings.
+1. The site asks you if you want to purchase an account to keep your repos private. You don't need this now and you can always get this service later.
+1. The site also invites you to walk through a tutorial. Skip it for now so you can keep progressing through this lab quickly. You can go back to the tutorial later and we have the link at the end of this page.
+1. Use the GitHub UI to create a new repository called **devnet-hello-world** in your username space.
+1. Make the repository public.
+1. Initialize the repo with a `README.md` file.
+   Now you have a GitHub repo with just one file, **README.md**.
 
-### Learn more about Postman
+Now, let's get **git** set up on your machine.
+1. Download and install **git** locally on your machine from [git-scm.com](https://git-scm.com).
+1. Close your Terminal and open it again to validate the installation and check it out.
+1. Type the ``git help`` command to see the options you have at the command line:
+   ```
+   git help
+   ```
 
-Postman is a very useful tool that goes well beyond what is discussed here. You can learn more by looking at the [Postman docs](https://www.getpostman.com/docs/).
+Now, let's create and edit some files and sync them between your machine and your GitHub account.
+1. Open a Terminal window and go to your coding directory:
+  ```
+  cd /Users/username/Code
+  ```
+1. Run this command to pull down your new devnet-hello-world repo to your machine. Remember to use your GitHub username rather than *githubusername* in the URL below:
+   ```
+   git clone  https://github.com/githubusername/devnet-hello-world
+   ```
+1. To see your new devnet-hello-world repo, type:
+   ```
+   ls
+   ```
+1. Go to your devnet-hello-world directory:
+   ```
+   cd devnet-hello-world
+   ```
+1. You can see your README.md file from your GitHub repo with these commands!
+   ```
+   ls
+   ````
+   and
+   ```
+   more README.md
+   ```
+1. Type `q` to exit the `more` program.
 
+Your GitHub repo, `devnet-hello-world`, is now on your local machine.
 
-#### Congratulations! You've Completed [Hello World for Rusty Coders!]
+Now let's add a new file to your local repo. We'll just move the one you created earlier.
+* ``mv ../hellodevnet.py .`` (or write a new `hellodevnet.py` file)
+* ``git add hellodevnet.py`` You now added the new file to your local devnet-hello-world repo.
+* ``git commit -m "added hellodevnet.py"``
+Oh- Did you get an error? Yes, you got an error because you didn't tell git who you are. You can pull from any public GitHub repo anonymously, but to make a commit you need to tell them who you are, using an email associated with a GitHub account. Here are the commands:
+* ``git config --global user.email "you@example.com"``
+* ``git config --global user.name "Your Name"``
+Now try again:
+* ``git commit -a -m "added hellodevnet.py"``
+You now committed your changes in your local repo.
+``git push`` You now pushed those changes up to your GitHub repo.
+
+Now go take a look at your GitHub repo by opening http://github.com/githubusername/devnet-hello-world in your browser. You should see your **hellodevnet.py** file up there. Success! Congratulations!
+
+## Learn more about GitHub
+
+I just showed you how to share code between your local machine and your GitHub account, but these tools are much more powerful than that. They allow for collaborative coding. You can learn more about GitHub by doing [GitHub's Hello World](https://guides.github.com/activities/hello-world/). You learn how to work with other coders by creating branches, making commits, and opening and merging pull requests.
+
+#### Next Step: Get going with Postman
