--- a/labs/helloworld-rustycoder-getsetup/1.md
+++ b/labs/helloworld-rustycoder-getsetup/1.md
@@ -1,7 +1,6 @@
-# HelloWorld for the Rusty Coder : Get started (for Mac)
+# HelloWorld for the Rusty Coder: Get started (for Mac)
 
-
-This DevNet learning lab helps the rusty coder quickly download modern software tools and use them to write a Hello World app. It is not a comprehensive tutorial about the tools, as there are many free resources out there today. Rather, it is a way to quickly get set up, get hands on, and get working code. We made some choices for you to minimize the research you need to do to get coding. We assume that you will dig deeper after you're done to learn more.
+This DevNet Learning Lab helps a "rusty" coder quickly download modern software tools and use them to write a Hello World app. It is not a comprehensive tutorial about the tools, as there are many free resources out there today. Rather, it is a way to quickly get set up, get hands on, and get working code. We made some choices for you to minimize the research you need to do to get coding. We assume that you will dig deeper after you're done to learn more.
 
 A rusty coder is someone who coded in their past (say, over 5, 10, or 20 years ago) and wants to get started again using the tools that are available today in a fast easy way. A rusty coder probably used Unix or Windows in the past. A rusty coder has used a command line and coded with APIs in an older operating system and language, but may not have coded with REST APIs. This learning lab is designed for developing on a Mac today.
 
@@ -9,62 +8,34 @@ A rusty coder is someone who coded in their past (say, over 5, 10, or 20 years a
 
 The objective of this lab is to show the rusty coder how to:
 
-* Find and use the terminal and command line tools on their Mac
-* Install and use the latest version of python
-* Install and use git and github for storing and sharing code
+* Find and use the Terminal and command line tools on their Mac.
+* Install and use the latest version of Python.
+* Install and use Git and GitHub for storing and sharing code.
 * Install postman for making REST API calls.
 
-If you already know how to use the Mac terminal, python, git, and GitHub, then you should skip this learning lab.
+If you already know how to use the Mac Terminal, Python, Git, and GitHub, then you should skip this learning lab.
 
 ## Prerequisites
 
-You need a Mac with an internet connection.
+You need a Mac with an Internet connection.
 
-## Step 1. Find the terminal on your Mac and play around in Unix
+## Step 1: Find the Terminal on your Mac and play around in Unix
 
 The Mac is a developer's machine and the **Terminal** has lots of stuff built in for developers. Mac OS uses OS X which is built on Unix, so a rusty coder can get going quickly.
 
-Let's open up your terminal and pin it to your dock, since you will be doing lots of coding.
+Let's open up your Terminal and pin it to your dock, since you will be doing lots of coding.
 
-* Open up your **Finder**. Click on **Applications**. Click on the **Utilities folder**. Click on **Terminal**
-* Or, a faster way to bring up the **Terminal** from your keyboard is to press **command-spacebar** and type **Terminal**
-* Pin it to your dock by ctrl-clicking on the Terminal icon in your dock and clicking on **Options->Keep in dock**
+1. Open up your **Finder**. Click **Applications**. Open the **Utilities folder**. Double-click **Terminal** to open it.
+   Or, a faster way to bring up the **Terminal** from your keyboard is to press **command-spacebar** and type **Terminal**.
+1. Pin it to your dock by dragging the Terminal icon to the Dock.
 
-Now play around in the terminal.
-* `pwd` shows you what directory you're in. Hey look, you have a **/Users/username** folder!
-* `ls` shows what's in your home directory. You will find your **Documents**, **Downloads**, **Desktop** and other familiar folders.
-* `mkdir Code` Go ahead and create a folder for you to code in right there at the top level. You can do your coding in **/Users/username/Code**
+Now play around in the Terminal.
+* `pwd` shows you what directory you're in. Hey look, you have a **/Users/username** folder, also known as a home directory!
+* `ls` shows what's in your current directory, which should be your home directory. You will find your **Documents**, **Downloads**, **Desktop**, and other familiar folders.
+* `mkdir Code` Go ahead and create a folder for you to code in right there at the top level. You can do your coding in **/Users/username/Code**.
 * `emacs` or `vi` Use your favorite old school text editor.
 * `ls /usr/bin` Take a look at all the commands that are available at your finger tips.
 
 Yes, it's all there. Is it all coming back to you now?
 
 Now let's get some software tools installed on your machine.
-
-## Step 2. Get started with Python.
-
-Python is one of the fastest-growing programming languages. If you want to learn one language, I would recommend you start there. Some version of python is already installed on your Mac, but go ahead and download the latest from python.org.
-
-* Go to [python.org](http://python.org) to download the latest version of python. Your executable will be **python3**.
-* Close your terminal and open a new one so it can find your new python3 executable.
-* Type `python3` at your command line. You now have an execution environment for python.
-* Type `>>> print("Hello World")`
-* Type `>>> quit()` to exit.
-
-Congratulations! You just wrote your first Hello World command in python!
-
-Now let's write and run a python script.
-* ``cd /Users/username/Code`` Go to your new Code directory
-* Use your favorite text editor to create a file called **hellodevnet.py**
-* `emacs hellodevnet.py`
-* Put the following text in your new file:
-```
-print("Hello World")
-print("Hello DevNet")
-```
-* Type **ctrl-x ctrl-s** to save and exit.
-* Type `python3 hellodevnet.py`
-
-Congratulations! You just ran your first Hello World python program!
-
-#### Next Step: Get going with git
